Project NAme updates -rt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="games_tab">Games Tab</string>
     <string name="music_tab">Music Tab</string>
     <string name="all_applications">All Applications</string>
-    <string name="initial_app_name">ReKritiKs</string>
+    <string name="initial_app_name">ReKritiKsApp</string>
     <string name="e_mail">E-Mail</string>
     <string name="leaderboard">Leaderboard</string>
     <string name="dashboard">Dashboard</string>
