--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="leaderboard">Leaderboard</string>
     <string name="dashboard">Dashboard</string>
     <string name="logout">Logout</string>
+    <string name="update">Update</string>
 </resources>
